--- a/src/main/resources/assets/moborigins/lang/tr_tr.json
+++ b/src/main/resources/assets/moborigins/lang/tr_tr.json
@@ -24,7 +24,7 @@
     "power.moborigins.snow_trail.description": "Arkandan kar bir iz bırakırsın.",
   
     "power.moborigins.frigid_strength.name": "Buz Kuvveti",
-    "power.moborigins.frigid_strength.description": "Deal more damage in cold areas.",
+    "power.moborigins.frigid_strength.description": "Soğuk yerlerde daha fazla hasar verirsin.",
   
     "origin.moborigins.witch.name": "Cadı",
     "origin.moborigins.witch.description": "Zalim ve kıkırdayan Cadılar iksircilikte uzman ve büyüde iyilerdir",
