--- a/src/main/resources/assets/moborigins/lang/tr_tr.json
+++ b/src/main/resources/assets/moborigins/lang/tr_tr.json
@@ -187,7 +187,7 @@
     "power.moborigins.warped_fungus_eater.name": "Mantar Açlığı",
     "power.moborigins.warped_fungus_eater.description": "Çarpık mantar atıştırabilirsin, ayrıca bu seni hızlandırır.",
   
-    "power.moborigins.water_combatant.name": "Su Savaşçısı",
+    "power.moborigins.water_combatant.name": "Su Yiğidi",
     "power.moborigins.water_combatant.description": "Sudayken daha fazla hasar verirsin.",
   
     "power.moborigins.dyeable.name": "Boyanabilir",
