--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -1,6 +1,9 @@
 {
   "enchantment.moborigins.heat_protection": "Защита от жары",
   "enchantment.moborigins.ground_spikes": "Земляные шипы",
+  "enchantment.moborigins.heat_protection.desc": "Защищает некоторые происхождения от перегрева",
+  "enchantment.moborigins.ground_spikes.desc": "Предотвращает некоторые происхождения от скольжения по суше",
+
   "death.attack.split": "%1$s попытался разделиться в ничто.",
   "death.attack.split.player": "%1$s разделился, пока пытался сбежать от %2$s.",
   "text.moborigins.become_elder": "Вы превратились в Древнего Стража!",
@@ -41,9 +44,6 @@
   "power.moborigins.lava_walk.name": "Ходящий по лаве",
   "power.moborigins.lava_walk.description": "У тебя есть возможность ходить по источникам лавы!",
 
-  "power.moborigins.lava_speed.name": "Адепт лавы",
-  "power.moborigins.lava_speed.description": "Обычно ты медленный, но развиваешь огромную скорость на лаве.",
-
   "power.moborigins.rideable_creature.name": "Ездовое существо",
   "power.moborigins.rideable_creature.description": "Другие игроки могут ездить на тебе!",
 
@@ -68,8 +68,8 @@
   "power.moborigins.monument_spawn.name": "Крепость - твой дом",
   "power.moborigins.monument_spawn.description": "Ты появляешься в подводной крепости.",
   
-  "power.moborigins.land_slowness.name": "Пресноводный",
-  "power.moborigins.land_slowness.description": "Ты медленный, когда на земле.",
+  "power.moborigins.surface_weakness.name": "Пресноводный",
+  "power.moborigins.surface_weakness.description": "Ты медленный, когда на земле.",
   
   "power.moborigins.prismarine_skin.name": "Призмариновая кожа",
   "power.moborigins.prismarine_skin.description": "Твоя кожа состоит из призмарина, из-за чего ты получаешь естественную броню.",
@@ -108,7 +108,7 @@
   "power.moborigins.alpha_wolf.description": "Прирученные тобою волки более сильные!",
 
   "power.moborigins.full_moon.name": "Оборотень",
-  "power.moborigins.full_moon.description": "Когда восходит полная луна, ты становишся быстрее, сильнее и живучие.",
+  "power.moborigins.full_moon.description": "Когда восходит полная луна, ты становишся быстрее, сильнее и живучее.",
 
   "power.moborigins.wolf_body.name": "Волкоподобный",
   "power.moborigins.wolf_body.description": "У тебя на 2 сердца меньше, чем у людей.",
@@ -150,10 +150,46 @@
   "power.moborigins.sly.description": "Ты быстрый.",
 
   "power.moborigins.small_fox.name": "Маленькая лиса",
-  "power.moborigins.small_fox.description": "У тебя на 2 сердца меньше, чем у людей."
+  "power.moborigins.small_fox.description": "У тебя на 2 сердца меньше, чем у людей.",
 
+  "power.moborigins.wolf_howl.name": "Вой",
+  "power.moborigins.wolf_howl.description": "Ты можешь использовать свою активную способность, чтобы выть, давая скорость и силу волкам поблизости.",
 
- 
-  
-  
+  "power.moborigins.wolf_pack.name": "Волчья стая",
+  "power.moborigins.wolf_pack.description": "Когда рядом с тобой хотя бы 4 волка, ты получаешь скорость и урон от атаки",
+
+  "origin.moborigins.drowned.name": "Утопленник",
+  "origin.moborigins.drowned.description": "Обитатели океанских глубин, они орудуют своими трезубцами и нападают на живых, которые осмелившихся пересечь океан.",
+
+  "power.moborigins.drowned_vision.name": "Промокшие глаза",
+  "power.moborigins.drowned_vision.description": "Твои глаза приспособлены к воде, и когда ты находишься за её пределами, всё кажется голубым",
+
+  "power.moborigins.trident_expert.name": "Эксперт по трезубцу",
+  "power.moborigins.trident_expert.description": "Ты мастер владения трезубцем, наносишь на 2 урона больше, как в ближнем, так и в дальнем бою. Также ты можешь использовать зачарование Тягун без дождя/воды ценой дополнительной прочности.",
+
+  "power.moborigins.seas_storm.name": "Гроза морей",
+  "power.moborigins.seas_storm.description": "Ты можешь использовать зачарование Громовержец в независимости от погоды.",
+
+  "power.moborigins.zombie_hunger.name": "Голод зомби",
+  "power.moborigins.zombie_hunger.description": "Твой постоянный голод по плоти быстрее тебя истощает.",
+
+  "power.moborigins.undead.name": "Нежить",
+  "power.moborigins.undead.description": "Ты нежить, и горишь днём на открытом солнце. Также получаешь больше урона от Небесной кары.",
+
+  "power.moborigins.overheat.name": "Перегрев",
+  "power.moborigins.overheat.description": "У тебя есть температурная шкала, которая медленно начинает заполняться в горячих биомах и снижаться в других.",
+
+  "power.moborigins.melting.name": "Плавление",
+  "power.moborigins.melting.description": "По мере того, как твоя температурная шкала заполнится, ты начнёшь медленно таять в горячих биомах, теряя здоровье и скорость.",
+
+  "effect.moborigins.hero_of_the_illagers": "Герой разбойников",
+
+  "power.moborigins.warped_fungus_eater.name": "Грибной голод",
+  "power.moborigins.warped_fungus_eater.description": "Ты можешь съесть искажённый грибок, чтобы утолить голод и получить незначительную прибавку к скорости.",
+
+  "power.moborigins.water_combatant.name": "Водный боец",
+  "power.moborigins.water_combatant.description": "Находясь в воде, ты наносишь больше урона.",
+
+  "power.moborigins.dyeable.name": "Окрашиваемый",
+  "power.moborigins.dyeable.description": "Ты можешь кликнуть с красителем в руке, чтобы изменить свой оттенок."
 }
